--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
 actionlib==1.13.2
 angles==1.9.13
+astroid==2.9.3
+attrs==21.4.0
+black==22.1.0
 bondpy==1.8.6
 camera-calibration==1.16.0
 camera-calibration-parsers==1.12.0
@@ -11,9 +14,13 @@ cv-bridge==1.16.0
 diagnostic-analysis==1.11.0
 diagnostic-common-diagnostics==1.11.0
 diagnostic-updater==1.11.0
+dnspython==2.2.1
 dynamic-reconfigure==1.7.2
+email-validator==1.1.3
 Flask==2.0.3
+Flask-Login==0.5.0
 Flask-SQLAlchemy==2.5.1
+Flask-WTF==1.0.0
 gazebo_plugins==2.9.2
 gazebo_ros==2.9.2
 gencpp==0.6.5
@@ -23,15 +30,35 @@ genmsg==0.5.16
 gennodejs==2.0.2
 genpy==0.6.15
 greenlet==1.1.2
+idna==3.3
 image-geometry==1.16.0
+iniconfig==1.1.1
 interactive-markers==1.12.0
+isort==5.10.1
 itsdangerous==2.1.1
 Jinja2==3.0.3
 joint-state-publisher==1.15.1
 joint-state-publisher-gui==1.15.1
 laser_geometry==1.6.7
+lazy-object-proxy==1.7.1
 MarkupSafe==2.1.0
+mccabe==0.6.1
 message-filters==1.15.14
+mypy-extensions==0.4.3
+packaging==21.3
+pathspec==0.9.0
+platformdirs==2.5.1
+pluggy==1.0.0
+py==1.11.0
+pylint==2.12.2
+pylint-flask==0.6
+pylint-flask-sqlalchemy==0.2.0
+pylint-plugin-utils==0.7
+pyparsing==3.0.7
+pytest==7.1.0
+pytest-flask==1.2.0
+pytest-flask-sqlalchemy==1.0.2
+pytest-mock==3.7.0
 python-qt-binding==0.4.4
 qt-dotgraph==0.4.2
 qt-gui==0.4.2
@@ -102,6 +129,10 @@ tf2-geometry-msgs==0.7.5
 tf2-kdl==0.7.5
 tf2-py==0.7.5
 tf2-ros==0.7.5
+toml==0.10.2
+tomli==2.0.1
 topic-tools==1.15.14
 Werkzeug==2.0.3
+wrapt==1.13.3
+WTForms==3.0.1
 xacro==1.14.13
